--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <a href="httpshttps://www.youtube.com/watch?v=fcWr1Bd0Vuk">
                 <img src="https://img.youtube.com/vi/fcWr1Bd0Vuk/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
-                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=YMS6yE_faEo">
+                <img src="https://img.youtube.com/vi/YMS6yE_faEo/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
                 <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
