--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <a href="https://www.youtube.com/watch?v=YMS6yE_faEo">
                 <img src="https://img.youtube.com/vi/YMS6yE_faEo/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
-                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=1w7OgIMMRc4">
+                <img src="https://img.youtube.com/vi/1w7OgIMMRc4/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
                 <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
