--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <a href="httpshttps://www.youtube.com/watch?v=fcWr1Bd0Vuk">
                 <img src="https://img.youtube.com/vi/fcWr1Bd0Vuk/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=YMS6yE_faEo">
-                <img src="https://img.youtube.com/vi/YMS6yE_faEo/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=_5vDT2e1tRk">
+                <img src="https://img.youtube.com/vi/_5vDT2e1tRk/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=1w7OgIMMRc4">
                 <img src="https://img.youtube.com/vi/1w7OgIMMRc4/maxresdefault.jpg" />
