--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <a href="https://www.youtube.com/watch?v=1w7OgIMMRc4">
                 <img src="https://img.youtube.com/vi/1w7OgIMMRc4/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
-                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=TMZi25Pq3T8">
+                <img src="https://img.youtube.com/vi/TMZi25Pq3T8/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
                 <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
