--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <a href="https://www.youtube.com/watch?v=TMZi25Pq3T8">
                 <img src="https://img.youtube.com/vi/TMZi25Pq3T8/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
-                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=TMZi25Pq3T8">
+                <img src="https://img.youtube.com/vi/TMZi25Pq3T8/maxresdefault.jpg" />
             </a>
         </div>
     </section>
